--- a/index.html
+++ b/index.html
@@ -1,11 +1,171 @@
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
-  </head>
-  <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
-  </body>
+<!DOCTYPE html><html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://unpkg.com/vue@next"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">  
+  <title>Evergreen-Vue</title>
+  <style>body{background-color: #f5f5f5}</style>
+</head>
+
+<body>
+  <div style="height: 40px;"></div>
+
+  <!-- YouTube Embed -->
+  <div class="container text-center">
+    <div id="player"></div>
+  </div>
+
+  <div style="height: 20px;"></div>
+
+  <div class="container text-center" id = "userinterface">
+    <div class="row px-2 gx-2"> <!-- Vue attached here -->
+      <!-- Space -->
+      <div class="col"></div>
+      <!-- Left Button -->
+      <div class="col-1 text-center">
+        <button class="btn btn-outline-primary" @click="lbc" id="lb" type="button" style="height: 50px; width: 50px; border: 1px solid #000; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">
+          <h4><i class="bi bi-arrow-up align-middle"></i></h4>
+        </button>
+      </div>
+      <!-- User Input -->
+      <input v-model="textContent" @keyup.enter="rbc" @keydown.[.prevent="lbc" @keydown.].prevent="rbc" class="col-6" type="text" id="userinput" style="height: 50px; border: 1px solid #000000; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></input>
+      <!-- Right Button -->
+      <div class="col-1 text-center">
+        <button class="btn btn-outline-primary" @click="rbc" id="rb" type="button" style="height: 50px; width: 50px; border: 1px solid #000; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">
+          <h4><i class="bi bi-arrow-down align-middle"></i></h4>
+        </button>
+      </div>
+      <!-- Space -->
+      <div class="col"></div>
+    </div>
+
+    <div style="height:20px"></div>
+    <!-- <div><h2>{{ ci }}</h2></div> -->
+    
+    <div style="height: 300px;"></div>
+    <div class="container text-center">
+      <text>Ever<span style="color: darkgreen">green</span> {{ ci }}</text>
+    </div>
+  </div>
+  
+
+</body>
+
+<!-- YouTube Embed -->
+<script>
+  var tag = document.createElement('script');
+  tag.src = "https://www.youtube.com/iframe_api";
+  var firstScriptTag = document.getElementsByTagName('script')[0];
+  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+  var player;
+  function onYouTubeIframeAPIReady() {
+    player = new YT.Player('player', {
+      height: '390',
+      width: '640',
+      videoId: 'ji5_MqicxSo?rel=0',
+      playerVars: {
+        'playsinline': 1,
+        'controls': 0,
+        'modestbranding': 1,
+        'rel':0
+      }
+    });
+  }
+</script>
+
+<!-- Vue -->
+<script>
+  const app = {
+    data() {
+      return {
+        ci: 0,
+        cip: 0, // content index prior
+        textContent: null,
+        stopblock: 138
+      }},
+    methods: {
+      lbc() {
+        this.cip = this.ci
+        this.ci--
+        saveContent(this.cip)
+        navigate(this.ci)
+        updateContent(this.ci)
+      },
+      rbc() {
+        this.cip = this.ci
+        this.ci++
+        saveContent(this.cip)
+        navigate(this.ci)
+        updateContent(this.ci)
+      }
+    }
+  }
+  const vm = Vue.createApp(app).mount('#userinterface')
+</script>
+
+<!-- JSON Import -->
+<script>
+  var json = JSON.parse(localStorage.getItem('storage'))
+</script>
+
+<script>
+  // ci = content index, ct = current time
+  function navigate(ci) {
+    const ct = inSec(json[ci]["timestamp"])
+    if(closeEnough(ct)) {
+      player.playVideo()
+    }
+    else {
+      player.seekTo(ct)
+      player.playVideo()
+    }
+  }
+
+  function closeEnough(target) {
+    if(Math.abs(player.getCurrentTime() -  target) < 0.5) { return true }
+    else { return false }
+  }
+
+  function inSec(str) {
+    const m_s = str.split(":")
+    const m = parseInt(m_s[0], 10)
+    const s = parseInt(m_s[1], 10)
+    return m*60+s
+  }
+
+  function updateContent(ci) {
+    vm.textContent = json[ci]["content"]
+  }
+
+  function saveContent(ci) {
+    json[ci]["content"] = vm.textContent
+    localStorage.setItem('storage', JSON.stringify(json))
+  }
+
+
+  var cipa = 0 // content index prior autoStop
+
+  function autoStop() { // added: logic for time-dependent yet single-fire activation
+    if(inSec(json[vm.ci+1]["timestamp"])-0.2 < player.getCurrentTime() && cipa != vm.ci) { player.pauseVideo(); cipa = vm.ci }
+  }
+
+  function autoUpdate() {
+    if(inSec(json[vm.ci+1]["timestamp"])+0.5 < player.getCurrentTime()) {
+      vm.cip = vm.ci
+      vm.ci++
+      saveContent(vm.cip)
+      updateContent(vm.ci)
+    }
+  }
+
+  // can I pass a "function call" to setInterval instead of "function" - i.e. setInterval(evaluateStopBlock(player.getCurrentTime(), 1000)?
+  var watcher = setInterval(function() { autoStop(); autoUpdate() }, 1000)
+</script>
+
 </html>
+
+<!-- YouTube iFrame API https://developers.google.com/youtube/iframe_api_reference#seekTo -->
+<!-- Vue.js polling using setInterval() https://renatello.com/vue-js-polling-using-setinterval/ -->
+<!-- Handling Enter Key in Vue.js https://stackoverflow.com/questions/42951967/handling-enter-key-in-vue-js -->
